nginx-init.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nginx-init
  name: nginx-init
  namespace: operations
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-init
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx-init
    spec:
      containers:
      - image: nginx
        name: nginx
