spin-sample.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deployment
  namespace: operations
  labels:
    app: apache
spec:
  selector:
    matchLabels:
      app: apache
  replicas: 1
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
        - name: apache
          image: ${parameters.docker_img}
          resources:
            limits:
              memory: 100Mi
              cpu: 100m
            requests:
              memory: 100Mi
              cpu: 100m
          ports:
            - containerPort: 80
              protocol: TCP
