jenkins-svc2.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-agent
spec:
  ports:
    - port: 50000
      targetPort: 50000
      name: slavelistener
  selector:
    app: jenkins
