ingress-site.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: site-ingress
spec:
  rules:
  - host: home.mysite.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
