sample-ingress-stack.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend-1
  name: frontend-1
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: frontend-1
---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend-1
  name: frontend-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-1
  strategy: {}
  template:
    metadata:
          labels:
        app: frontend-1
    spec:
      containers:
      - image: gcr.io/google-samples/hello-app:1.0
        name: frontend-1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend-2
  name: frontend-2
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: frontend-2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend-2
  name: frontend-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-2
  strategy: {}
  template:
    metadata:
          labels:
        app: frontend-2
    spec:
      containers:
      - image: gcr.io/google-samples/hello-app:2.0
        name: frontend-2
        ports:
        - containerPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: frontend-ingress
spec:
  rules:
  - host: hello-world.info
    http:
      paths:
      - backend:
          serviceName: frontend-1
          servicePort: 8080
        path: /v1
      - backend:
          serviceName: frontend-2
          servicePort: 8080
        path: /v2
  - host: api-v1.hello-world.info
    http:
      paths:
      - backend:
          serviceName: frontend-1
          servicePort: 8080
        path: /
  - host: api-v2.hello-world.info
    http:
      paths:
      - backend:
          serviceName: frontend-2
          servicePort: 8080
        path: /
